Change title slightly because I am a super fun guy

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Ben Picolo
+title: Ben Picolo's Blogaroo
 email: be.picolo@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Programming best practices as best as I know how.
