All the cool blogs have coments

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Ben Picolo's Blogaroo
+title: Ben and Code
 email: be.picolo@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Programming best practices as best as I know how.
