--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Ben and Code
 email: be.picolo@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Programming best practices as best as I know how.
+# description: > # this means to ignore newlines until "baseurl:"
+  # Programming best practices as best as I know how.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://bpicolo.github.io" # the base hostname & protocol for your site
 twitter_username: benpicolo
